service_clusterip.yaml
# service1.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-service
spec:
  type: ClusterIP
  selector:
    app: service1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
