ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /service1
            backend:
              serviceName: service1-service
              servicePort: 80
          - path: /service2
            backend:
              serviceName: service2-service
              servicePort: 80
